chore: add maps to Project