@@ -17,15 +17,12 @@ public interface ElementContainer {
   }
 
   default <T extends OntoumlElement> Optional<T> getElementById(String id, Class<T> type) {
-
     List<OntoumlElement> elements =
-        getAllContents().stream()
-            .filter(e -> type.isInstance(e) && id.equals(e.getId()))
-            .collect(Collectors.toList());
+        getAllContents().stream().filter(e -> type.isInstance(e) && id.equals(e.getId())).toList();
 
-    if (elements.size() == 1) return Optional.of(type.cast(elements.get(0)));
+    if (elements.size() == 1) return Optional.of(type.cast(elements.getFirst()));
 
-    if (elements.size() == 0) return Optional.empty();
+    if (elements.isEmpty()) return Optional.empty();
 
     throw new IllegalStateException(
         "There is more than one instance of " + type.getName() + " with the same id!");
